Update TableNamesReport to print online and offline tables